add visualization for skripsi

--- a/notebooks/03_train_markov_quality_eval.ipynb
+++ b/notebooks/03_train_markov_quality_eval.ipynb
@@ -137,6 +137,85 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# CELL 5: Visualization (Speed-Acceleration Grid Map)\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Mapping index to names as requested\n",
+        "group_labels = {0: \"Heavy Traffic\", 1: \"Light Traffic\"}\n",
+        "\n",
+        "for group_idx in range(2):\n",
+        "    # Skip if no model was trained for this group\n",
+        "    if group_idx >= len(state_definitions) or state_definitions[group_idx] is None:\n",
+        "        print(f\"Skipping visualization for Group {group_idx} (No model found).\")\n",
+        "        continue\n",
+        "\n",
+        "    print(f\"Generating S-A Grid Map for {group_labels[group_idx]}...\")\n",
+        "\n",
+        "    # 1. Retrieve Data\n",
+        "    # Get the raw data points used for this group\n",
+        "    raw_points = np.concatenate(grouped_segments[group_idx])\n",
+        "    # Get the lookup table (State ID -> [Speed Center, Accel Center])\n",
+        "    lookup_table = state_definitions[group_idx]\n",
+        "\n",
+        "    # 2. Setup Plot\n",
+        "    fig, ax = plt.subplots(figsize=(14, 9))\n",
+        "\n",
+        "    # 3. Plot Raw S-A Grid Values (Hollow Blue Circles)\n",
+        "    # edgecolors='b', facecolors='none' creates the hollow circle effect\n",
+        "    ax.scatter(raw_points[:, 0], raw_points[:, 1],\n",
+        "               s=30, alpha=0.6, edgecolors='dodgerblue', facecolors='none', \n",
+        "               label='S-A Grid Values')\n",
+        "\n",
+        "    # 4. Plot State IDs (Red Text)\n",
+        "    # We iterate through the lookup table to place the ID at the bin center\n",
+        "    for state_id, coords in enumerate(lookup_table):\n",
+        "        v_center = coords[0]\n",
+        "        a_center = coords[1]\n",
+        "        \n",
+        "        # Only plot text if it's within the visible graph limits (optional check)\n",
+        "        ax.text(v_center, a_center, str(state_id),\n",
+        "                color='darkred', fontsize=9, fontweight='bold', \n",
+        "                ha='center', va='center', label='States' if state_id == 0 else \"\")\n",
+        "\n",
+        "    # 5. Configure Grid Lines (To match V_RES and A_RES)\n",
+        "    # Determine bounds for the grid\n",
+        "    v_max_plot = np.max(raw_points[:, 0]) + V_RES\n",
+        "    a_min_plot = np.min(raw_points[:, 1]) - A_RES\n",
+        "    a_max_plot = np.max(raw_points[:, 1]) + A_RES\n",
+        "\n",
+        "    # Set ticks to align exactly with the resolution (bin edges)\n",
+        "    # We shift by half resolution because the lookup table stores centers, \n",
+        "    # but the grid lines should be on the edges.\n",
+        "    x_ticks = np.arange(0, v_max_plot, V_RES)\n",
+        "    y_ticks = np.arange(np.floor(a_min_plot), np.ceil(a_max_plot), A_RES)\n",
+        "\n",
+        "    ax.set_xticks(x_ticks)\n",
+        "    ax.set_yticks(y_ticks)\n",
+        "    ax.grid(True, which='both', linestyle='-', color='gray', alpha=0.5)\n",
+        "\n",
+        "    # 6. Labels and Titles\n",
+        "    ax.set_xlabel(\"Speed (km/h)\", fontsize=14)\n",
+        "    ax.set_ylabel(\"Acceleration ($m/s^2$)\", fontsize=14)\n",
+        "    ax.set_title(f\"Speed-Acceleration Grid Map: {group_labels[group_idx]} (SEG{group_idx})\", fontsize=16)\n",
+        "    \n",
+        "    # Custom Legend\n",
+        "    # Since we plotted text multiple times, we need to handle the legend manually \n",
+        "    # or rely on the label set in the first iteration.\n",
+        "    handles, labels = ax.get_legend_handles_labels()\n",
+        "    # Filter duplicates in legend caused by the text loop\n",
+        "    by_label = dict(zip(labels, handles))\n",
+        "    ax.legend(by_label.values(), by_label.keys(), loc='upper right', framealpha=1, fontsize=12)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# CELL 5: Save\n",
         "# Ensure output path ends with slash for cleanliness, though S3 is object store\n",
         "model_dir = OUTPUT_MODEL_DIR.rstrip(\"/\")\n",
