--- a/notebooks/00_ingest_raw_trip.ipynb
+++ b/notebooks/00_ingest_raw_trip.ipynb
@@ -179,7 +179,7 @@
         "\n",
         "df_1Hz = df_hr.set_index('t').resample('1S').median().dropna().reset_index()\n",
         "print(\"Running Snap-to-Roads...\")\n",
-        "df_final = assign_segment_ids(df_1Hz, GOOGLE_ROADS_API_KEY)\n"
+        "# df_final = assign_segment_ids(df_1Hz, GOOGLE_ROADS_API_KEY)\n"
       ]
     },
     {
