debug predict accel

--- a/notebooks/03_simplified_train_ml_speed_accel.ipynb
+++ b/notebooks/03_simplified_train_ml_speed_accel.ipynb
@@ -47,6 +47,7 @@
       "execution_count": null,
       "id": "037c5b0b",
       "metadata": {
+        "id": "037c5b0b",
         "tags": [
           "parameters"
         ]
@@ -65,7 +66,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "8fab2e60",
-      "metadata": {},
+      "metadata": {
+        "id": "8fab2e60"
+      },
       "outputs": [],
       "source": [
         "if INPUT_PROCESSED_FOLDER is None:\n",
@@ -149,7 +152,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "d20d3133",
-      "metadata": {},
+      "metadata": {
+        "id": "d20d3133"
+      },
       "outputs": [],
       "source": [
         "import s3fs\n",
@@ -402,7 +407,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "776a53c5",
-      "metadata": {},
+      "metadata": {
+        "id": "776a53c5"
+      },
       "outputs": [],
       "source": [
         "def calculate_metrics(y_true, y_pred):\n",
@@ -428,10 +435,8 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "682aa260",
-      "metadata": {
-        "id": "682aa260"
-      },
+      "id": "35a1bdc8",
+      "metadata": {},
       "outputs": [],
       "source": [
         "from sklearn.model_selection import GroupKFold, GridSearchCV\n",
@@ -453,7 +458,7 @@
         "            \"RandomForest\": RandomForestRegressor(),\n",
         "            \"DecisionTree\": DecisionTreeRegressor(),\n",
         "            \"XGBoost\": xgb.XGBRegressor(tree_method=\"hist\", eval_metric=\"rmse\"),\n",
-        "            \"LightGBM\": lgb.LGBMRegressor(),\n",
+        "            # \"LightGBM\": lgb.LGBMRegressor(),\n",
         "            \"ANN\": MLPRegressor(max_iter=500)\n",
         "        }\n",
         "\n",
@@ -478,11 +483,11 @@
         "                \"learning_rate\": [0.05, 0.1],\n",
         "                \"max_depth\": [4, 6]\n",
         "            },\n",
-        "            \"LightGBM\": {\n",
-        "                \"n_estimators\": [200, 400],\n",
-        "                \"learning_rate\": [0.05, 0.1],\n",
-        "                \"num_leaves\": [31, 63]\n",
-        "            },\n",
+        "            # \"LightGBM\": {\n",
+        "            #     \"n_estimators\": [200, 400],\n",
+        "            #     \"learning_rate\": [0.05, 0.1],\n",
+        "            #     \"num_leaves\": [31, 63]\n",
+        "            # },\n",
         "            \"ANN\": {\n",
         "                \"hidden_layer_sizes\": [(64, 32), (128, 64)],\n",
         "                \"activation\": [\"relu\", \"tanh\"]\n",
@@ -646,7 +651,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a28372f8",
-      "metadata": {},
+      "metadata": {
+        "id": "a28372f8"
+      },
       "outputs": [],
       "source": [
         "X_df = df[feature_cols]\n",
@@ -658,7 +665,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "ea4dd453",
-      "metadata": {},
+      "metadata": {
+        "id": "ea4dd453"
+      },
       "outputs": [],
       "source": [
         "print(\"📊 Splitting data...\")\n",
@@ -773,14 +782,16 @@
         "y_train = y_train_df.values\n",
         "y_test  = y_test_df.values\n",
         "\n",
-        "groups = groups_train.values "
+        "groups = groups_train.values"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "27e509e4",
-      "metadata": {},
+      "metadata": {
+        "id": "27e509e4"
+      },
       "outputs": [],
       "source": [
         "predictor = SpeedAccelerationPredictor()\n",
@@ -891,11 +902,13 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f582feb3",
-      "metadata": {},
+      "metadata": {
+        "id": "f582feb3"
+      },
       "outputs": [],
       "source": [
         "# Build X for full dataset\n",
-        "X = df[[ \n",
+        "X = df[[\n",
         "    'enhanced_altitude', 'bearing',\n",
         "    'speed_mps_prev1', 'speed_mps_prev2',\n",
         "    'delta_dist', 'delta_lat', 'delta_lon',\n",
@@ -908,12 +921,25 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "03dd7987",
-      "metadata": {},
+      "metadata": {
+        "id": "03dd7987"
+      },
       "outputs": [],
       "source": [
         "X_scaled_full = predictor.scaler.transform(X)\n",
-        "predicted_speed = predictor.best_speed_model.predict(X_scaled_full)\n",
-        "df['predicted_speed_mps'] = predicted_speed"
+        "predicted_speed = predictor.best_speed_model.predict(X_scaled_full)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8NBDtVk4vh1C",
+      "metadata": {
+        "id": "8NBDtVk4vh1C"
+      },
+      "outputs": [],
+      "source": [
+        "df['predicted_speed'] = predicted_speed"
       ]
     },
     {
@@ -942,7 +968,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "921b8a59",
-      "metadata": {},
+      "metadata": {
+        "id": "921b8a59"
+      },
       "outputs": [],
       "source": [
         "y_true_accel = df['acceleration']\n",
@@ -996,7 +1024,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e546cd83",
-      "metadata": {},
+      "metadata": {
+        "id": "e546cd83"
+      },
       "outputs": [],
       "source": [
         "feature_cols = [\n",
@@ -1012,7 +1042,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "ee0d6092",
-      "metadata": {},
+      "metadata": {
+        "id": "ee0d6092"
+      },
       "outputs": [],
       "source": [
         "import pickle\n",
