add second by second emission data for comparison with skripsi

--- a/notebooks/06_movestar.ipynb
+++ b/notebooks/06_movestar.ipynb
@@ -17,12 +17,37 @@
         "# ---------------------------------------------------------\n",
         "INPUT_CYCLE_PATH = \"s3://runs/test_run/cycle.csv\"\n",
         "OUTPUT_REPORT_PATH = \"s3://runs/test_run/emissions.json\"\n",
-        "VEHICLE_TYPE = 1  # 1=Motorcycle, 2=Passenger Car\n",
+        "VEHICLE_TYPE = 1 \n",
         "\n",
         "# MinIO Credentials (DEFAULTS ONLY)\n",
         "MINIO_ENDPOINT = \"http://localhost:9000\"\n",
         "MINIO_ACCESS_KEY = \"admin\"\n",
         "MINIO_SECRET_KEY = \"password123\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# CELL 1.5: Derive OUTPUT_DETAILED_PATH from OUTPUT_REPORT_PATH\n",
+        "# Change only the filename part, keeping the same directory path\n",
+        "if OUTPUT_REPORT_PATH.endswith('.json'):\n",
+        "    OUTPUT_DETAILED_PATH = OUTPUT_REPORT_PATH.replace('.json', '_detailed.csv')\n",
+        "else:\n",
+        "    # Fallback: replace filename extension or append\n",
+        "    # Works with S3 paths (s3://bucket/path/file.ext)\n",
+        "    last_slash = OUTPUT_REPORT_PATH.rfind('/')\n",
+        "    if last_slash >= 0:\n",
+        "        base_path = OUTPUT_REPORT_PATH[:last_slash + 1]\n",
+        "        filename = OUTPUT_REPORT_PATH[last_slash + 1:]\n",
+        "        # Remove extension if present\n",
+        "        if '.' in filename:\n",
+        "            filename = filename.rsplit('.', 1)[0]\n",
+        "        OUTPUT_DETAILED_PATH = f\"{base_path}{filename}_detailed.csv\"\n",
+        "    else:\n",
+        "        OUTPUT_DETAILED_PATH = f\"{OUTPUT_REPORT_PATH}_detailed.csv\"\n"
       ]
     },
     {
@@ -215,6 +240,50 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# CELL 4.5: Helper Function for Second-by-Second Bin Assignment\n",
+        "def get_bin_per_second(Spd, Acc, VSP):\n",
+        "    \"\"\"Returns operating mode bin index for each second.\"\"\"\n",
+        "    c1 = 2.23693629  # m/s to mph\n",
+        "    bins = np.zeros(len(Spd), dtype=int)\n",
+        "    try:\n",
+        "        maxVSP = np.max(VSP) + 1\n",
+        "    except:\n",
+        "        return bins\n",
+        "\n",
+        "    for i in range(len(Spd)):\n",
+        "        sc1 = Spd[i] * c1\n",
+        "        binselector = 0\n",
+        "        if Acc[i] * c1 <= -2:\n",
+        "            binselector = 1\n",
+        "        elif i >= 3 and Acc[i - 2] * c1 < -1 and Acc[i - 1] * c1 < -1:\n",
+        "            binselector = 1\n",
+        "        elif sc1 < 1:\n",
+        "            binselector = 2\n",
+        "        else:\n",
+        "            if sc1 < 25:\n",
+        "                map = [0, 3, 6, 9, 12, maxVSP]\n",
+        "                binoffset = 3\n",
+        "            elif sc1 < 50:\n",
+        "                map = [0, 3, 6, 9, 12, 18, 24, 30, maxVSP]\n",
+        "                binoffset = 9\n",
+        "            else:\n",
+        "                map = [6, 12, 18, 24, 30, maxVSP]\n",
+        "                binoffset = 18\n",
+        "            for index, vsp_cur in enumerate(map):\n",
+        "                if VSP[i] < vsp_cur:\n",
+        "                    binselector = binoffset + index\n",
+        "                    break\n",
+        "        binselector = binselector - 1\n",
+        "        bins[i] = binselector\n",
+        "    return bins\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# CELL 5: Execution\n",
         "print(f\"Loading cycle from {INPUT_CYCLE_PATH}...\")\n",
         "try:\n",
@@ -230,6 +299,96 @@
         "    print(\"✅ Calculation Complete.\")\n",
         "except Exception as e:\n",
         "    print(f\"❌ Error during execution: {e}\")\n",
+        "    raise\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# CELL 6.5: Generate Second-by-Second Emissions Data\n",
+        "print(f\"Generating second-by-second emissions data...\")\n",
+        "try:\n",
+        "    # Reload cycle data and compute intermediate values\n",
+        "    with fs.open(INPUT_CYCLE_PATH, 'rb') as f:\n",
+        "        df_cycle = pd.read_csv(f)\n",
+        "    \n",
+        "    # Conversion: KM/H -> M/S\n",
+        "    speed_ms = df_cycle['speed_kmh'].values / 3.6\n",
+        "    \n",
+        "    # Compute acceleration and VSP (same as in movestar function)\n",
+        "    Acc = Spd2Acc(speed_ms)\n",
+        "    df_vehicle_src_coeff = pd.read_csv(os.path.join(BASE_DIR, 'VehicleSrcCoeff.csv'))\n",
+        "    row = df_vehicle_src_coeff[df_vehicle_src_coeff['VehicleType'] == VEHICLE_TYPE]\n",
+        "    \n",
+        "    A, B, C, M, f = row['A'].values[0], row['B'].values[0], row['C'].values[0], row['M'].values[0], row['f'].values[0]\n",
+        "    \n",
+        "    VSP = A * speed_ms + B * speed_ms ** 2 + C * speed_ms ** 3 + M * np.multiply(Acc, speed_ms)\n",
+        "    VSP = VSP / f\n",
+        "    \n",
+        "    # Get bin assignment per second\n",
+        "    bins_per_second = get_bin_per_second(speed_ms, Acc, VSP)\n",
+        "    \n",
+        "    # Load emission rates per bin (already divided by 3600 in ems_rate_cal, so these are per-second rates)\n",
+        "    ems_file = os.path.join(BASE_DIR, 'EmsRate_' + str(VEHICLE_TYPE) + '.csv')\n",
+        "    df_ems = pd.read_csv(ems_file, header=None)\n",
+        "    df_ems = df_ems / 3600  # Convert to per-second rates\n",
+        "    \n",
+        "    # Create a mapping from bin index (0-22) to emission rates\n",
+        "    # The bin index from get_bin_per_second() maps directly to row index in df_ems\n",
+        "    # Column 0 is the bin ID (metadata), columns 1-7 are: CO, HC, NOx, PM2.5_Ele, PM2.5_Org, Energy, CO2\n",
+        "    ems_dict = {}\n",
+        "    for row_idx in range(len(df_ems)):\n",
+        "        row = df_ems.iloc[row_idx]\n",
+        "        ems_dict[row_idx] = {\n",
+        "            'CO': row[1],\n",
+        "            'HC': row[2],\n",
+        "            'NOx': row[3],\n",
+        "            'PM25_Ele': row[4],\n",
+        "            'PM25_Org': row[5],\n",
+        "            'Energy': row[6],\n",
+        "            'CO2': row[7]\n",
+        "        }\n",
+        "    \n",
+        "    # Build DataFrame with second-by-second data\n",
+        "    detailed_data = []\n",
+        "    for i in range(len(speed_ms)):\n",
+        "        bin_idx = bins_per_second[i]\n",
+        "        # Get emission rates for this bin index (0-22 maps to row index in df_ems)\n",
+        "        # Default to 0 if bin index is out of range\n",
+        "        if 0 <= bin_idx < len(df_ems):\n",
+        "            ems_rates = ems_dict[bin_idx]\n",
+        "        else:\n",
+        "            ems_rates = {k: 0.0 for k in ['CO', 'HC', 'NOx', 'PM25_Ele', 'PM25_Org', 'Energy', 'CO2']}\n",
+        "        \n",
+        "        detailed_data.append({\n",
+        "            'time_s': i + 1,  # 1-indexed time\n",
+        "            'speed_ms': speed_ms[i],\n",
+        "            'acceleration': Acc[i],\n",
+        "            'VSP': VSP[i],\n",
+        "            'operating_mode': bin_idx,\n",
+        "            'CO_g': ems_rates['CO'],\n",
+        "            'HC_g': ems_rates['HC'],\n",
+        "            'NOx_g': ems_rates['NOx'],\n",
+        "            'PM25_Ele_g': ems_rates['PM25_Ele'],\n",
+        "            'PM25_Org_g': ems_rates['PM25_Org'],\n",
+        "            'Energy_KJ': ems_rates['Energy'],\n",
+        "            'CO2_g': ems_rates['CO2']\n",
+        "        })\n",
+        "    \n",
+        "    df_detailed = pd.DataFrame(detailed_data)\n",
+        "    \n",
+        "    # Save to MinIO\n",
+        "    print(f\"Saving detailed emissions to {OUTPUT_DETAILED_PATH}...\")\n",
+        "    with fs.open(OUTPUT_DETAILED_PATH, 'w') as f:\n",
+        "        df_detailed.to_csv(f, index=False)\n",
+        "    \n",
+        "    print(f\"✅ Detailed emissions saved. Total seconds: {len(df_detailed)}\")\n",
+        "    \n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error generating detailed emissions: {e}\")\n",
         "    raise\n"
       ]
     },
