add eval metrics

--- a/notebooks/03_simplified_train_ml_speed_accel.ipynb
+++ b/notebooks/03_simplified_train_ml_speed_accel.ipynb
@@ -57,9 +57,26 @@
         "# Parameters passed from Papermill\n",
         "INPUT_PROCESSED_FOLDER = None\n",
         "OUTPUT_ML_MODEL_PATH = None\n",
+        "OUTPUT_TRAIN_RESULTS_CSV = None\n",
         "MINIO_ENDPOINT = None\n",
         "MINIO_ACCESS_KEY = None\n",
         "MINIO_SECRET_KEY = None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8619761e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Parameters\n",
+        "INPUT_PROCESSED_FOLDER = \"s3://processed-data\"\n",
+        "OUTPUT_ML_MODEL_PATH = \"s3://models/ml/speed_accel_model.pkl\"\n",
+        "OUTPUT_TRAIN_RESULTS_CSV = \"s3://models/ml/speed_accel_train_results.csv\"\n",
+        "MINIO_ENDPOINT = \"http://minio:9000\"\n",
+        "MINIO_ACCESS_KEY = \"admin\"\n",
+        "MINIO_SECRET_KEY = \"password123\""
       ]
     },
     {
@@ -76,6 +93,9 @@
         "\n",
         "if OUTPUT_ML_MODEL_PATH is None:\n",
         "    OUTPUT_ML_MODEL_PATH = \"s3://models/ml/speed_accel_model.pkl\"\n",
+        "\n",
+        "if OUTPUT_TRAIN_RESULTS_CSV is None:\n",
+        "    OUTPUT_TRAIN_RESULTS_CSV = \"s3://models/ml/speed_accel_train_results.csv\"\n",
         "\n",
         "if MINIO_ENDPOINT is None:\n",
         "    MINIO_ENDPOINT = \"http://minio:9000\"\n",
@@ -1036,6 +1056,33 @@
         "    'elev_gain_m', 'traffic_level',\n",
         "    'heading_change', 'turn_count',\n",
         "]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "200a9cbb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "67412de0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save CSV locally (optional)\n",
+        "df.to_csv(\"train_results.csv\", index=False)\n",
+        "\n",
+        "# Upload to MinIO\n",
+        "with fs.open(OUTPUT_TRAIN_RESULTS_CSV, \"w\") as f:\n",
+        "    df.to_csv(f, index=False)\n",
+        "\n",
+        "print(\"Training results saved to:\", OUTPUT_TRAIN_RESULTS_CSV)"
       ]
     },
     {
