--- a/notebooks/08_ml_validate_quality.ipynb
+++ b/notebooks/08_ml_validate_quality.ipynb
@@ -261,7 +261,16 @@
         "print(\"✅ Predictions generated using YOUR method:\")\n",
         "print(f\"   predicted_accel = predicted_speed - speed_mps_prev1\")\n",
         "print(f\"   Speed predictions: {y_pred_speed.shape}\")\n",
-        "print(f\"   Accel predictions: {y_pred_accel.shape}\")"
+        "print(f\"   Accel predictions: {y_pred_accel.shape}\")\n",
+        "\n",
+        "# DEBUG: Check data sanity\n",
+        "print(f\"\\n🔍 DEBUG: Data Sanity Checks\")\n",
+        "print(f\"   speed_mps_prev1 range: [{df_test['speed_mps_prev1'].min():.2f}, {df_test['speed_mps_prev1'].max():.2f}]\")\n",
+        "print(f\"   predicted_speed range: [{df_test['predicted_speed'].min():.2f}, {df_test['predicted_speed'].max():.2f}]\")\n",
+        "print(f\"   predicted_accel range: [{df_test['predicted_accel'].min():.2f}, {df_test['predicted_accel'].max():.2f}]\")\n",
+        "print(f\"   actual_accel range: [{df_test['acceleration_m_s2'].min():.2f}, {df_test['acceleration_m_s2'].max():.2f}]\")\n",
+        "print(f\"   NaN in speed_mps_prev1: {df_test['speed_mps_prev1'].isna().sum()}\")\n",
+        "print(f\"   NaN in predicted_accel: {df_test['predicted_accel'].isna().sum()}\")"
       ]
     },
     {
@@ -326,7 +335,30 @@
         "print(f\"Mean Actual:  {accel_mean_actual:.4f} m/s²\")\n",
         "print(f\"Mean Pred:    {accel_mean_pred:.4f} m/s²\")\n",
         "print(f\"Std Actual:   {accel_std_actual:.4f} m/s²\")\n",
-        "print(f\"Std Pred:     {accel_std_pred:.4f} m/s²\")"
+        "print(f\"Std Pred:     {accel_std_pred:.4f} m/s²\")\n",
+        "\n",
+        "# DEBUG: Detailed acceleration analysis\n",
+        "print(f\"\\n🔍 DEBUG: Why Is Acceleration Bad?\")\n",
+        "print(f\"   Mean difference: {accel_mean_pred - accel_mean_actual:.4f} m/s² (should be ~0)\")\n",
+        "print(f\"   Std ratio: {accel_std_pred / accel_std_actual:.4f} (should be ~1)\")\n",
+        "print(f\"   Bias: {np.mean(y_pred_accel - y_test_accel):.4f} m/s²\")\n",
+        "\n",
+        "# Check if speed predictions are smooth (causing accel issues)\n",
+        "speed_changes = np.diff(y_pred_speed)\n",
+        "actual_speed_changes = np.diff(y_test_speed)\n",
+        "print(f\"\\n   Speed change analysis:\")\n",
+        "print(f\"     Predicted speed std of changes: {np.std(speed_changes):.4f}\")\n",
+        "print(f\"     Actual speed std of changes: {np.std(actual_speed_changes):.4f}\")\n",
+        "print(f\"     Ratio: {np.std(speed_changes) / np.std(actual_speed_changes):.4f}\")\n",
+        "\n",
+        "if accel_r2 < 0:\n",
+        "    print(f\"\\n⚠️  NEGATIVE R²! This means:\")\n",
+        "    print(f\"     - Model is worse than predicting mean\")\n",
+        "    print(f\"     - Likely causes:\")\n",
+        "    print(f\"       1. Speed predictions too smooth (low variance)\")\n",
+        "    print(f\"       2. Model not capturing acceleration dynamics\")\n",
+        "    print(f\"       3. Test set very different from training\")\n",
+        "    print(f\"       4. Model predicting absolute speed, not changes\")"
       ]
     },
     {
