real accel using speed t - t-1, not from accelerometer

--- a/notebooks/03_simplified_train_ml_speed_accel.ipynb
+++ b/notebooks/03_simplified_train_ml_speed_accel.ipynb
@@ -1043,6 +1043,165 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "d99991dd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# CELL: Comprehensive Visualization - Speed & Acceleration Predictions\n",
+        "print(\"=== GENERATING PREDICTION VISUALIZATIONS ===\\n\")\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.gridspec as gridspec\n",
+        "\n",
+        "# Determine sample size for visualization\n",
+        "full_length = len(df['speed_mps'])\n",
+        "sample_length = min(1000, full_length)  # Show max 1000 seconds\n",
+        "sample_start = 0  # Or choose: np.random.randint(0, full_length - sample_length)\n",
+        "sample_end = sample_start + sample_length\n",
+        "\n",
+        "print(f\"Visualizing {sample_length} seconds of predictions\")\n",
+        "print(f\"  (from index {sample_start} to {sample_end})\\n\")\n",
+        "\n",
+        "# Create figure\n",
+        "fig = plt.figure(figsize=(20, 14))\n",
+        "gs = gridspec.GridSpec(3, 2, figure=fig, hspace=0.35, wspace=0.25)\n",
+        "\n",
+        "# Calculate R² for display\n",
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+        "\n",
+        "speed_r2 = r2_score(df['speed_mps'], df['predicted_speed'])\n",
+        "speed_rmse = np.sqrt(mean_squared_error(df['speed_mps'], df['predicted_speed']))\n",
+        "speed_mae = mean_absolute_error(df['speed_mps'], df['predicted_speed'])\n",
+        "\n",
+        "accel_r2 = r2_score(df['acceleration'], df['predicted_accel'])\n",
+        "accel_rmse = np.sqrt(mean_squared_error(df['acceleration'], df['predicted_accel']))\n",
+        "accel_mae = mean_absolute_error(df['acceleration'], df['predicted_accel'])\n",
+        "\n",
+        "# ========================================\n",
+        "# ROW 1: SPEED VISUALIZATIONS\n",
+        "# ========================================\n",
+        "\n",
+        "# Plot 1: Speed Time Series\n",
+        "ax1 = fig.add_subplot(gs[0, :])\n",
+        "time_axis = np.arange(sample_start, sample_end)\n",
+        "ax1.plot(time_axis, df['speed_mps'].iloc[sample_start:sample_end], \n",
+        "         'b-', linewidth=2, label='Actual Speed', alpha=0.8)\n",
+        "ax1.plot(time_axis, df['predicted_speed'].iloc[sample_start:sample_end], \n",
+        "         'r-', linewidth=2, label='Predicted Speed', alpha=0.7)\n",
+        "ax1.set_xlabel('Time (seconds)', fontsize=12, fontweight='bold')\n",
+        "ax1.set_ylabel('Speed (m/s)', fontsize=12, fontweight='bold')\n",
+        "ax1.set_title(f'Speed Prediction: Actual vs Predicted\\nR²={speed_r2:.4f} | RMSE={speed_rmse:.4f} m/s | MAE={speed_mae:.4f} m/s', \n",
+        "              fontsize=14, fontweight='bold')\n",
+        "ax1.legend(loc='upper right', fontsize=11, framealpha=0.95)\n",
+        "ax1.grid(True, alpha=0.3)\n",
+        "\n",
+        "# Plot 2: Speed Scatter Plot\n",
+        "ax2 = fig.add_subplot(gs[1, 0])\n",
+        "ax2.scatter(df['speed_mps'], df['predicted_speed'], \n",
+        "            alpha=0.4, s=8, c='steelblue', edgecolors='none')\n",
+        "# Perfect prediction line\n",
+        "min_speed = min(df['speed_mps'].min(), df['predicted_speed'].min())\n",
+        "max_speed = max(df['speed_mps'].max(), df['predicted_speed'].max())\n",
+        "ax2.plot([min_speed, max_speed], [min_speed, max_speed], \n",
+        "         'r--', linewidth=2.5, label='Perfect Prediction')\n",
+        "ax2.set_xlabel('Actual Speed (m/s)', fontsize=11, fontweight='bold')\n",
+        "ax2.set_ylabel('Predicted Speed (m/s)', fontsize=11, fontweight='bold')\n",
+        "ax2.set_title(f'Speed Correlation\\nR²={speed_r2:.4f}', fontsize=13, fontweight='bold')\n",
+        "ax2.legend(loc='upper left', fontsize=10)\n",
+        "ax2.grid(True, alpha=0.3)\n",
+        "ax2.set_aspect('equal', adjustable='box')\n",
+        "\n",
+        "# Add statistics text\n",
+        "stats_text = f'Mean Actual: {df[\"speed_mps\"].mean():.3f} m/s\\n'\n",
+        "stats_text += f'Mean Predicted: {df[\"predicted_speed\"].mean():.3f} m/s\\n'\n",
+        "stats_text += f'Std Actual: {df[\"speed_mps\"].std():.3f} m/s\\n'\n",
+        "stats_text += f'Std Predicted: {df[\"predicted_speed\"].std():.3f} m/s'\n",
+        "ax2.text(0.05, 0.95, stats_text, transform=ax2.transAxes, \n",
+        "         fontsize=9, verticalalignment='top',\n",
+        "         bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.8))\n",
+        "\n",
+        "# Plot 3: Speed Error Distribution\n",
+        "ax3 = fig.add_subplot(gs[1, 1])\n",
+        "speed_errors = df['speed_mps'] - df['predicted_speed']\n",
+        "ax3.hist(speed_errors, bins=50, edgecolor='black', alpha=0.7, color='steelblue')\n",
+        "ax3.axvline(x=0, color='red', linestyle='--', linewidth=2.5, label='Zero Error')\n",
+        "ax3.axvline(x=speed_errors.mean(), color='green', linestyle='-', \n",
+        "            linewidth=2, label=f'Mean Error: {speed_errors.mean():.4f}')\n",
+        "ax3.set_xlabel('Prediction Error (m/s)', fontsize=11, fontweight='bold')\n",
+        "ax3.set_ylabel('Frequency', fontsize=11, fontweight='bold')\n",
+        "ax3.set_title(f'Speed Error Distribution\\nMean={speed_errors.mean():.4f} | Std={speed_errors.std():.4f} m/s', \n",
+        "              fontsize=13, fontweight='bold')\n",
+        "ax3.legend(loc='upper right', fontsize=10)\n",
+        "ax3.grid(True, alpha=0.3, axis='y')\n",
+        "\n",
+        "# ========================================\n",
+        "# ROW 2: ACCELERATION VISUALIZATIONS\n",
+        "# ========================================\n",
+        "\n",
+        "# Plot 4: Acceleration Time Series\n",
+        "ax4 = fig.add_subplot(gs[2, 0])\n",
+        "ax4.plot(time_axis, df['acceleration'].iloc[sample_start:sample_end], \n",
+        "         'b-', linewidth=2, label='Actual Acceleration', alpha=0.8)\n",
+        "ax4.plot(time_axis, df['predicted_accel'].iloc[sample_start:sample_end], \n",
+        "         'r-', linewidth=2, label='Predicted Acceleration', alpha=0.7)\n",
+        "ax4.axhline(y=0, color='gray', linestyle='-', linewidth=1, alpha=0.5)\n",
+        "ax4.set_xlabel('Time (seconds)', fontsize=11, fontweight='bold')\n",
+        "ax4.set_ylabel('Acceleration (m/s²)', fontsize=11, fontweight='bold')\n",
+        "ax4.set_title(f'Acceleration Prediction: Actual vs Predicted\\nR²={accel_r2:.4f} | RMSE={accel_rmse:.4f} m/s²', \n",
+        "              fontsize=13, fontweight='bold')\n",
+        "ax4.legend(loc='upper right', fontsize=10)\n",
+        "ax4.grid(True, alpha=0.3)\n",
+        "\n",
+        "# Plot 5: Acceleration Scatter Plot\n",
+        "ax5 = fig.add_subplot(gs[2, 1])\n",
+        "ax5.scatter(df['acceleration'], df['predicted_accel'], \n",
+        "            alpha=0.4, s=8, c='coral', edgecolors='none')\n",
+        "# Perfect prediction line\n",
+        "min_accel = min(df['acceleration'].min(), df['predicted_accel'].min())\n",
+        "max_accel = max(df['acceleration'].max(), df['predicted_accel'].max())\n",
+        "ax5.plot([min_accel, max_accel], [min_accel, max_accel], \n",
+        "         'r--', linewidth=2.5, label='Perfect Prediction')\n",
+        "ax5.axhline(y=0, color='gray', linestyle='-', linewidth=1, alpha=0.5)\n",
+        "ax5.axvline(x=0, color='gray', linestyle='-', linewidth=1, alpha=0.5)\n",
+        "ax5.set_xlabel('Actual Acceleration (m/s²)', fontsize=11, fontweight='bold')\n",
+        "ax5.set_ylabel('Predicted Acceleration (m/s²)', fontsize=11, fontweight='bold')\n",
+        "ax5.set_title(f'Acceleration Correlation\\nR²={accel_r2:.4f}', fontsize=13, fontweight='bold')\n",
+        "ax5.legend(loc='upper left', fontsize=10)\n",
+        "ax5.grid(True, alpha=0.3)\n",
+        "ax5.set_aspect('equal', adjustable='box')\n",
+        "\n",
+        "# Add statistics text\n",
+        "stats_text_accel = f'Mean Actual: {df[\"acceleration\"].mean():.4f} m/s²\\n'\n",
+        "stats_text_accel += f'Mean Predicted: {df[\"predicted_accel\"].mean():.4f} m/s²\\n'\n",
+        "stats_text_accel += f'Std Actual: {df[\"acceleration\"].std():.4f} m/s²\\n'\n",
+        "stats_text_accel += f'Std Predicted: {df[\"predicted_accel\"].std():.4f} m/s²'\n",
+        "ax5.text(0.05, 0.95, stats_text_accel, transform=ax5.transAxes, \n",
+        "         fontsize=9, verticalalignment='top',\n",
+        "         bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.8))\n",
+        "\n",
+        "# Overall title\n",
+        "fig.suptitle('ML Training Results: Speed & Acceleration Predictions', \n",
+        "             fontsize=16, fontweight='bold', y=0.995)\n",
+        "\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"\\n✅ Visualization complete!\")\n",
+        "print(\"\\n📊 SUMMARY:\")\n",
+        "print(f\"  Speed:\")\n",
+        "print(f\"    - R² Score: {speed_r2:.4f}\")\n",
+        "print(f\"    - RMSE: {speed_rmse:.4f} m/s ({speed_rmse*3.6:.4f} km/h)\")\n",
+        "print(f\"    - MAE: {speed_mae:.4f} m/s ({speed_mae*3.6:.4f} km/h)\")\n",
+        "print(f\"\\n  Acceleration:\")\n",
+        "print(f\"    - R² Score: {accel_r2:.4f}\")\n",
+        "print(f\"    - RMSE: {accel_rmse:.4f} m/s²\")\n",
+        "print(f\"    - MAE: {accel_mae:.4f} m/s²\")\n",
+        "print(f\"\\n  Sample size: {len(df):,} data points\")\n",
+        "print(f\"  Visualization window: {sample_length} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "e546cd83",
       "metadata": {
         "id": "e546cd83"
