--- a/notebooks/08_ml_validate_quality.ipynb
+++ b/notebooks/08_ml_validate_quality.ipynb
@@ -145,7 +145,7 @@
         "    'speed_ms': 'speed_mps',\n",
         "    'altitude': 'enhanced_altitude',\n",
         "    'acc_forward': 'acceleration_m_s2',\n",
-        "    'acceleration': 'acceleration_m_s2'\n",
+        "    'acceleration': 'acceleration'\n",
         "}\n",
         "\n",
         "for old, new in column_mapping.items():\n",
@@ -165,6 +165,9 @@
         "else:\n",
         "    df_test['speed_mps_prev1'] = df_test['speed_mps'].shift(1).fillna(0)\n",
         "    df_test['speed_mps_prev2'] = df_test['speed_mps'].shift(2).fillna(0)\n",
+        "\n",
+        "# Acceleration from raw speed\n",
+        "df_test['acceleration'] = (df_test['speed_mps'] - df_test['speed_mps_prev1']).fillna(0)\n",
         "\n",
         "# Delta features\n",
         "if 'position_lat' in df_test.columns and 'position_long' in df_test.columns:\n",
@@ -255,7 +258,7 @@
         "\n",
         "# Get true values\n",
         "y_test_speed = df_test['speed_mps'].values\n",
-        "y_test_accel = df_test['acceleration_m_s2'].values\n",
+        "y_test_accel = df_test['acceleration'].values\n",
         "y_pred_accel = df_test['predicted_accel'].values\n",
         "\n",
         "print(\"✅ Predictions generated using YOUR method:\")\n",
@@ -268,7 +271,7 @@
         "print(f\"   speed_mps_prev1 range: [{df_test['speed_mps_prev1'].min():.2f}, {df_test['speed_mps_prev1'].max():.2f}]\")\n",
         "print(f\"   predicted_speed range: [{df_test['predicted_speed'].min():.2f}, {df_test['predicted_speed'].max():.2f}]\")\n",
         "print(f\"   predicted_accel range: [{df_test['predicted_accel'].min():.2f}, {df_test['predicted_accel'].max():.2f}]\")\n",
-        "print(f\"   actual_accel range: [{df_test['acceleration_m_s2'].min():.2f}, {df_test['acceleration_m_s2'].max():.2f}]\")\n",
+        "print(f\"   actual_accel range: [{df_test['acceleration'].min():.2f}, {df_test['acceleration'].max():.2f}]\")\n",
         "print(f\"   NaN in speed_mps_prev1: {df_test['speed_mps_prev1'].isna().sum()}\")\n",
         "print(f\"   NaN in predicted_accel: {df_test['predicted_accel'].isna().sum()}\")"
       ]
